Add facebook image for other category

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,6 +58,8 @@
         <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.press.png">
         {% elsif page.categories contains 'president' %}
         <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.president.png">
+        {% elsif page.categories contains 'other' %}
+        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.other.png">
         {% else %}
         <meta property="og:image" content="{{ site.image_source }}/site/{{ site.og_image }}">
         {% endif %}
