Update facebook images

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,15 +41,15 @@
     <meta property="og:image" content="{{ site.image_source }}{{ page.image.source }}">
     {% else %}
         {% if page.categories contains 'criminality' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.crime.png">
+        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.law_and_order.png">
         {% elsif page.categories contains 'agrarian' %}
         <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.agrarian.png">
         {% elsif page.categories contains 'environment' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.evnironment.png">
+        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.environment.png">
         {% elsif page.categories contains 'foreign_affairs' %}
         <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.foreign.png">
         {% elsif page.categories contains 'business' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.business.png">
+        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.economy.png">
         {% elsif page.categories contains 'peace_process' %}
         <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.peace.png">
         {% elsif page.categories contains 'opinion' %}
@@ -61,7 +61,7 @@
         {% elsif page.categories contains 'other' %}
         <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.other.png">
         {% else %}
-        <meta property="og:image" content="{{ site.image_source }}/site/{{ site.og_image }}">
+        <meta property="og:image" content="{{ site.image_source }}/site/fb_post_02.1.default.png">
         {% endif %}
     {% endif %}
     <!--
