Use property instead of name in meta tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,25 +41,25 @@
     <meta property="og:image" content="{{ site.image_source }}{{ page.image.source }}">
     {% else %}
         {% if page.categories contains 'criminality' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.law_and_order.png">
+        <meta property="og:image" content="{{ site.image_source }}/site/fb_post_02.1.law_and_order.png">
         {% elsif page.categories contains 'agrarian' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.agrarian.png">
+        <meta property="og:image" content="{{ site.image_source }}/site/fb_post_02.1.agrarian.png">
         {% elsif page.categories contains 'environment' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.environment.png">
+        <meta property="og:image" content="{{ site.image_source }}/site/fb_post_02.1.environment.png">
         {% elsif page.categories contains 'foreign_affairs' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.foreign.png">
+        <meta property="og:image" content="{{ site.image_source }}/site/fb_post_02.1.foreign.png">
         {% elsif page.categories contains 'business' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.economy.png">
+        <meta property="og:image" content="{{ site.image_source }}/site/fb_post_02.1.economy.png">
         {% elsif page.categories contains 'peace_process' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.peace.png">
+        <meta property="og:image" content="{{ site.image_source }}/site/fb_post_02.1.peace.png">
         {% elsif page.categories contains 'opinion' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.opinion.png">
+        <meta property="og:image" content="{{ site.image_source }}/site/fb_post_02.1.opinion.png">
         {% elsif page.categories contains 'press' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.press.png">
+        <meta property="og:image" content="{{ site.image_source }}/site/fb_post_02.1.press.png">
         {% elsif page.categories contains 'president' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.president.png">
+        <meta property="og:image" content="{{ site.image_source }}/site/fb_post_02.1.president.png">
         {% elsif page.categories contains 'other' %}
-        <meta name="og:image" content="{{ site.image_source }}/site/fb_post_02.1.other.png">
+        <meta property="og:image" content="{{ site.image_source }}/site/fb_post_02.1.other.png">
         {% else %}
         <meta property="og:image" content="{{ site.image_source }}/site/fb_post_02.1.default.png">
         {% endif %}
