--- a/_includes/section_index.html
+++ b/_includes/section_index.html
@@ -55,9 +55,9 @@ Example:
                 <div class="index_entry">
 {% endif %}
 
-                    <h2><span class="date">{{ post.date | date: site.data.format.short_date }}</span>&nbsp;-&nbsp;<a href="{{ post.url }}">{{ post.title }}</a>{% if post.video.source != nil %}&nbsp;&nbsp;<i class="fa fa-video-camera" aria-hidden="true"></i>{% endif %}</h2>
+                    <h2><span class="date">{{ post.date | date: site.data.format.short_date }}</span>&nbsp;-&nbsp;<a href="{{ post.url }}" class="no_underline">{{ post.title | markdownify }}</a>{% if post.video.source != nil %}&nbsp;&nbsp;<i class="fa fa-video-camera" aria-hidden="true"></i>{% endif %}</h2>
                     {% if site.debug %}
-                    <p class="excerpt">{{ post.excerpt }}{% if post.video.source != nil %} <i class="fa fa-video-camera" aria-hidden="true"></i>{% endif %}</p>
+                    <p class="excerpt">{{ post.excerpt | markdownify }}{% if post.video.source != nil %} <i class="fa fa-video-camera" aria-hidden="true"></i>{% endif %}</p>
                     <p class="category">Categories:&nbsp;{{ post.categories | join: ", "}}</p>
                     <p class="tag">Tags:&nbsp;{{ post.tags | join: ", " }}</p>
                     {% endif %}
