--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 
 <section class="post_column_main">
 
-    <h1>{{ page.title }}</h1>
+    <h1>{{ page.title | markdownify }}</h1>
     <div class="meta">
         {% if site.debug %}
             {% if page.image.source %}
