--- a/_sass/block.scss
+++ b/_sass/block.scss
@@ -106,6 +106,11 @@ div.block {
                 }
             }
             
+            & > p,
+            & > h2 > a > p {
+                display: inline;
+            }
+            
             p {
                 margin: 0 !important;
                 padding: 0 !important;
@@ -159,7 +164,7 @@ div.block_default_fonts {
         & > ol > li.entry,
         & > div.entry,
         & > div.index_entry {
-            h2, h2 > a {
+            h2, h2 > a > p {
                 @include block_entry_heading($font_hub_default_title, $font_size_hub_default_title, $color_hub_entry_title);
                 @include max-screen(720px) {
                     font-size: $font_size_hub_default_title;
@@ -171,7 +176,7 @@ div.block_default_fonts {
                 font-weight: $font_weight_hub_default_title;
                 padding-bottom: 2px;
             }
-            h2 > a {
+            h2 > a > p {
                 border-bottom: none;
                 &:hover {
                     color: $color_link;
@@ -208,6 +213,7 @@ div.block_default_fonts {
                     line-height: $font_line_height_hub_default_text + 2;
                 }
             }
+            /*
             & p.excerpt {
                 @include set_font($font_hub_default_excerpt, $font_size_hub_default_excerpt, $color_hub_entry_excerpt);
                 line-height: $font_line_height_hub_default_excerpt;
@@ -215,14 +221,15 @@ div.block_default_fonts {
                     font-size: $font_size_hub_default_excerpt + 0;
                     line-height: $font_line_height_hub_default_excerpt + 2;
                 }
-                & i.fa {
-                    color: lighten($color_hub_entry_excerpt, 40%);
-                }
+            }
+            */
+            & i.fa {
+                color: lighten($color_hub_entry_excerpt, 40%);
             }
         }
 
         & > div.index_entry {
-            h2, h2 > a {
+            h2, h2 > a > p {
                 font-weight: normal;
             }
             h2 > i.fa {
@@ -244,13 +251,13 @@ div.block_compact_fonts {
         & > ol > li.entry,
         & > div.entry,
         & > div.index_entry {
-            h2, h2 > a {
+            h2, h2 > a > p {
                 text-transform: uppercase;
                 letter-spacing: 0.25px;
                 word-spacing: 0.175em;
                 padding-bottom: 2px;
             }
-            h2, h2 > a {
+            h2, h2 > a > p {
                 @include block_entry_heading($font_hub_compact_title, $font_size_hub_compact_title, $color_hub_entry_title);
                 line-height: $font_line_height_hub_compact_title + 2;
                 @include max-screen(720px) {
@@ -270,7 +277,7 @@ div.block_compact_fonts {
                 }
             }
 
-            p, li, p > a, li > a {
+            p, li, p > a, li > a > p {
                 @include set_font($font_hub_compact_text, $font_size_hub_compact_text, $color_hub_entry_text);
                 line-height: $font_line_height_hub_compact_text;
                 @include max-screen(720px) {
