--- a/_includes/post_operations.html
+++ b/_includes/post_operations.html
@@ -11,7 +11,7 @@
         </li>
         <li>
             <a href="https://twitter.com/share" data-via="{{ twitter }}"
-                data-url="{{ page.url }}"
+                data-url="{{ site.url }}{{ page.url }}"
                 data-text="{{ page.title }}"
                 data-toggle="tooltip"
                 data-placement="top"
