Use fix name for email post operation

--- a/_includes/post_operations.html
+++ b/_includes/post_operations.html
@@ -23,7 +23,7 @@
         </li>
         <li>
             <a href="mailto:your@email.com?subject={{ page.title }}&body=<a href='{{ site.url }}{{ page.url }}'>{{ page.title }}</a></br></br>{{ page.excerpt }}</br></br>Link: {{ site.url }}{{ page.url }}"
-                alt="{{ site.data.socmed[0].name }}"
+                alt="E-mail"
                 title="Send the post link as E-mail to...">
                 <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;
                 E-mail&nbsp;
