--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -71,15 +71,14 @@ section.post_column_main {
         text-align: center;
     }
     p + h5,
+    p + h6,
     h5 + h6,
     h6 + h5 {
         padding-top: 12px;
     }
     h2 + h2,
     h3 + h3,
-    h4 + h4,
-    h5 + h5,
-    h6 + h6 {
+    h4 + h4 {
         padding-top: 0;
     }
     h5 + h2,
@@ -90,6 +89,15 @@ section.post_column_main {
     h5 + p,
     h6 + p {
         margin-top: 12px;
+    }
+    h5 + h5,
+    h6 + h6,
+    h2 + p,
+    h3 + p,
+    h4 + p,
+    h5 + p,
+    h6 + p {
+        padding-top: 12px;
     }
 
 
@@ -644,6 +652,10 @@ section.post_column_main {
             width: 100%;
             height: 100%;
         }
+    }
+    
+    p.center {
+        text-align: center;
     }
 }
 
