Hide social media button labels in post display for small devices

--- a/_includes/post_operations.html
+++ b/_includes/post_operations.html
@@ -7,8 +7,7 @@
                 data-toggle="tooltip"
                 data-placement="top"
                 title="Tweet this page">
-                <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>&nbsp;
-                Tweet
+                <i class="fa fa-twitter fa-lg" aria-hidden="true"></i><span class="label">&nbsp;Tweet</span>
             </a>
         </li>
         <li>
@@ -17,16 +16,14 @@
                 rel="nofollow"
                 target="_blank"
                 title="Share on Facebook">
-                <i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i>&nbsp;
-                Share&nbsp;
+                <i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i><span class="label">&nbsp;Share&nbsp;</span>
             </a>
         </li>
         <li>
             <a href="mailto:your@email.com?subject={{ page.title }}&body=<a href='{{ site.url }}{{ page.url }}'>{{ page.title }}</a></br></br>{{ page.excerpt }}</br></br>Link: {{ site.url }}{{ page.url }}"
                 alt="E-mail"
                 title="Send the post link as E-mail to...">
-                <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;
-                E-mail&nbsp;
+                <i class="fa fa-envelope" aria-hidden="true"></i><span class="label">&nbsp;E-mail&nbsp;</span>
             </a>
         </li>
         <li>
@@ -34,8 +31,7 @@
                 data-toggle="tooltip"
                 data-placement="top"
                 title="Print the page or save as PDF file">
-                <i class="fa fa-print fa-lg" aria-hidden="true"></i>&nbsp;
-                Print
+                <i class="fa fa-print fa-lg" aria-hidden="true"></i><span class="label">&nbsp;Print</span>
             </a>
         </li>
     </ul>
