Update links to section index page

--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -16,10 +16,9 @@
                 <a href="/news/peace_process/">Peace Process</a>
                 <a href="/news/other/">Other News</a>
                 <hr>
-                <a href="/topic/">All Topics</a>
-                <hr>
+                <a href="/story/">Stories</a>
+                <a href="/topic/">Topics</a>
                 <a href="/opinion/">Opinions</a>
-                
                 <hr>
                 <a href="/info/">Information</a>
                 <hr>
